--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -19,7 +19,7 @@
       display: flex;
       align-items: center;
       padding: 0 20px;
-    
+
       &--box {
         display: flex;
         justify-content: space-between;
@@ -28,16 +28,13 @@
         font-weight: bold;
         margin: 0 auto;
      
-
         &__name {
           font-size: 16px;
         }
-
         &__icons{
           width: 60px;
           display: flex;
           justify-content: flex-end;
-
 
           &__new-group {  
             margin-right: 5px;
@@ -57,8 +54,7 @@
     &__group-list {
     height: calc(100% - 100px);
     background-color: #2f3e51;
-    padding: 0 20px;
-   
+    padding: 0 20px;   
 
       &__block {
         padding-top: 20px;
@@ -74,25 +70,115 @@
   }
 }
 
-
-
 .main-chat {
   height: 100%;
   width: calc(100% - 300px);
 
     &__group-info {
     height: 100px;
+    padding: 0 40px;
+    display: flex;
+    justify-content: space-between;
     background-color: #ffffff;
     border-bottom-color: #eeeeee;
+
+      &__current {
+        
+        &__name {  
+          margin-top: 35px;
+          color: #333333;
+          font-size: 20px;
+        }
+        &__member {
+          margin-top: 15px;
+          list-style: none;
+          color: #999999;
+          font-size: 12px;
+          &__list {
+          }
+        }
+      }  
+
+      &__edit-btn {
+        font-size: 16px;
+        height: 40px;
+        line-height: 40px;
+        padding: 0 20px;
+        margin-top: 28px;
+        border: solid 1px #38aef0;
+        a{
+          text-decoration: none;
+          color: #38aef0;
+        }
+      }
     }
 
     &__message-list{
     height: calc(100% - 100px - 90px);
     background-color: #fafafa;
+    padding-top: 35px;
+
+      &__block {
+        padding: 0 40px 46px 40px;
+        &__name{
+          display: flex;
+          margin-bottom: 12px;
+          font-size: 16px;
+          color: #333333;
+          &__time{
+            margin-left: 10px;
+            font-size: 12px;
+            color: #999999;
+          }
+        }
+        &__message{
+          font-size: 14px;
+          color: #434A54;
+        }
+      }
     }
 
     &__message-form{
-    height: 90px;
-    background-color: #d2d2d2;
+      background-color: #d2d2d2;
+      padding: 20px 40px;
+      height: 90px;
+      &__block {
+        display: flex;
+        justify-content: space-between;
+        height: 50px;
+        &__input{
+          // display: flex;
+          margin-left: 10px;
+          height: 50px;
+          width: 100%;
+          position: relative;
+          &__comment{
+            height: 50px;
+            width: 100%;
+          }
+      
+          &__label{
+            position: absolute;
+            right: 10px;
+            top:  13px;
+            &__file{
+              display: none;              
+            }
+          }
+        }
+      
+        &--send-btn{
+          margin-left: 15px;
+          height: 50px;
+          width: 100px;
+          background-color: #38aef0;
+          text-align: center;
+          a{
+            text-decoration: none;
+            color: #fafafa;
+            line-height: 50px;
+          }
+        }
+      }
     }
 }
