--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+$white-color:#ffffff;
+$btn-color: #38aef0;
+
+
 .wrapper {
   display: flex;
   height: 100vh;
@@ -11,7 +15,7 @@
 .side-bar {
   height: 100%;
   width: 300px;
-  color: #ffffff;
+  color: $white-color;
 
     &__user {
       height: 100px;
@@ -40,12 +44,12 @@
             margin-right: 5px;
           }
             .fas{
-              color: #ffffff;
+              color: $white-color;
             }
           &__edit-user {
           }
             .fas{
-              color: #ffffff;
+              color: $white-color;
             }
         }
       }
@@ -74,16 +78,15 @@
   height: 100%;
   width: calc(100% - 300px);
 
-    &__group-info {
+    &__group {
     height: 100px;
     padding: 0 40px;
     display: flex;
     justify-content: space-between;
-    background-color: #ffffff;
+    background-color: $white-color;
     border-bottom-color: #eeeeee;
 
       &__current {
-        
         &__name {  
           margin-top: 35px;
           color: #333333;
@@ -99,21 +102,21 @@
         }
       }  
 
-      &__edit-btn {
+      &__btn {
         font-size: 16px;
         height: 40px;
         line-height: 40px;
         padding: 0 20px;
         margin-top: 28px;
-        border: solid 1px #38aef0;
+        border: solid 1px $btn-color;
         a{
           text-decoration: none;
-          color: #38aef0;
+          color: $btn-color;
         }
       }
     }
 
-    &__message-list{
+    &__message {
     height: calc(100% - 100px - 90px);
     background-color: #fafafa;
     padding-top: 35px;
@@ -131,14 +134,14 @@
             color: #999999;
           }
         }
-        &__message{
+        &__list{
           font-size: 14px;
           color: #434A54;
         }
       }
     }
 
-    &__message-form{
+    &__form{
       background-color: #d2d2d2;
       padding: 20px 40px;
       height: 90px;
@@ -147,7 +150,6 @@
         justify-content: space-between;
         height: 50px;
         &__input{
-          // display: flex;
           margin-left: 10px;
           height: 50px;
           width: 100%;
@@ -167,11 +169,10 @@
           }
         }
       
-        &--send-btn{
+        &--btn{
           margin-left: 15px;
-          height: 50px;
           width: 100px;
-          background-color: #38aef0;
+          background-color: $btn-color;
           text-align: center;
           a{
             text-decoration: none;
