--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,45 +1,43 @@
 .main-chat
-  .main-chat__group-info
-    .main-chat__group-info__current
-      .main-chat__group-info__current__name
+  .main-chat__group
+    .main-chat__group__current
+      .main-chat__group__current__name
       現在のグループ
-      %ul.main-chat__group-info__current__member
-        %li.main-chat__group-info__current__member__list
+      %ul.main-chat__group__current__member
+        %li.main-chat__group__current__member__list
           Menber:○○○○        
-    .main-chat__group-info__edit-btn
+    .main-chat__group__btn
       = link_to "#" do
         Edit
 
-  .main-chat__message-list
-    .main-chat__message-list__block
-      .main-chat__message-list__block__name
+  .main-chat__message
+    .main-chat__message__block
+      .main-chat__message__block__name
         masa
-        .main-chat__message-list__block__name__time
+        .main-chat__message__block__name__time
           2020/05/25(Mon) 12:36:39
-      .main-chat__message-list__block__message
+      .main-chat__message__block__list
         こんにちは
 
 
-    .main-chat__message-list__block
-      .main-chat__message-list__block__name
+    .main-chat__message__block
+      .main-chat__message__block__name
         masa
-        .main-chat__message-list__block__name__time
+        .main-chat__message__block__name__time
           2020/05/25(Mon) 13:36:39
-      .main-chat__message-list__block__message
+      .main-chat__message__block__list
         こんばんは
 
 
-  .main-chat__message-form
-    .main-chat__message-form__block
-      .main-chat__message-form__block__input
-        %input{type: "text" ,placeholder: "Type a message", class: "main-chat__message-form__block__input__comment" }
+  .main-chat__form
+    .main-chat__form__block
+      .main-chat__form__block__input
+        %input{type: "text" ,placeholder: "Type a message", class: "main-chat__form__block__input__comment" }
 
-        -# .main-chat__message-form__block__input__image-icon
-        %label{class: "main-chat__message-form__block__input__label"}
+        %label{class: "main-chat__orm__block__input__label"}
           = icon('fas', 'image')
-          %input{type: "file" ,class:"main-chat__message-form__block__input__label__file"}
-
-      .main-chat__message-form__block--send-btn
+          %input{type: "file" ,class:"main-chat__form__block__input__label__file"}
+      .main-chat__form__block--btn
         = link_to "#" do
           Send
   
