--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -2,14 +2,14 @@
   .side-bar__user
     .side-bar__user--box
       %p.side-bar__user--box__name
-        masa
+        = current_user.name
       %ul.side-bar__user--box__icons
         %li.side-bar__user--box__icons__new-group
           = link_to "#" do
             = icon('fas','edit')
         %li.side-bar__user--box__icons__edit-user
-          = link_to "#" do
-            = icon('fas', 'cog')
+          = link_to edit_user_path(current_user) do
+            = icon('fas', 'cog', class: 'icon')
 
   .side-bar__group-list
     .side-bar__group-list__block
