--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -5,21 +5,17 @@
         = current_user.name
       %ul.side-bar__user--box__icons
         %li.side-bar__user--box__icons__new-group
-          = link_to "#" do
+          = link_to new_group_path(current_user) do
             = icon('fas','edit')
         %li.side-bar__user--box__icons__edit-user
-          = link_to edit_user_path(current_user) do
+          = link_to edit_user_path(current_user.id) do
             = icon('fas', 'cog', class: 'icon')
 
   .side-bar__group-list
-    .side-bar__group-list__block
-      .side-bar__group-list__block--name
-        techcamp
-      .side-bar__group-list__block--info
-        まだメッセージがありません
-
-    .side-bar__group-list__block
-      .side-bar__group-list__block--name
-        techcamp
-      .side-bar__group-list__block--info
-        まだメッセージがありません
+    - current_user.groups.each do |group|
+      .side-bar__group-list__block
+        = link_to "#" do
+          .side-bar__group-list__block--name
+            = group.name
+          .side-bar__group-list__block--info
+            まだメッセージがありません
