--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -124,10 +124,11 @@
     &__message {
     height: calc(100% - 100px - 90px);
     background-color: #fafafa;
-    padding-top: 35px;
+    padding: 35px 40px 0 40px;
+    overflow: scroll;
 
       &__block {
-        padding: 0 40px 46px 40px;
+        padding-bottom: 46px;
         &__name{
           display: flex;
           margin-bottom: 12px;
@@ -150,41 +151,42 @@
       background-color: #d2d2d2;
       padding: 20px 40px;
       height: 90px;
-      &__block {
+      form  {
         display: flex;
-        justify-content: space-between;
-        height: 50px;
-        &__input{
-          margin-left: 10px;
-          height: 50px;
-          width: 100%;
+        .main-chat__form__content {
           position: relative;
-          &__comment{
-            height: 50px;
+          width: 100%;
+          &__message {
             width: 100%;
+            height: 50px;
           }
-      
-          &__label{
+          &__block {
             position: absolute;
+            top: 10px;
             right: 10px;
-            top:  13px;
-            &__file{
-              display: none;
+
+            label {
+              display: inline-block;
+              font-size: inherit;
+              text-rendering: auto;
+              -webkit-font-smoothing: antialiased;
+              
+              .hidden{
+                display: none;
+              }
             }
           }
         }
-      
-        &--btn{
-          margin-left: 15px;
-          width: 100px;
-          background-color: $btn-color;
-          text-align: center;
-          a{
+        
+          .main-chat__form__btn {
+            margin-left: 15px;
+            width: 100px;
+            background-color: $btn-color;
+            text-align: center;
             text-decoration: none;
             color: #fafafa;
             line-height: 50px;
-          }
-        }
+          }        
       }
     }
 }
