--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -14,8 +14,8 @@
   .side-bar__group-list
     - current_user.groups.each do |group|
       .side-bar__group-list__block
-        = link_to "#" do
+        = link_to group_messages_path(group) do
           .side-bar__group-list__block--name
             = group.name
           .side-bar__group-list__block--info
-            まだメッセージがありません
+            = group.show_last_message
