--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -159,6 +159,7 @@
           &__message {
             width: 100%;
             height: 50px;
+            padding: 20px;
           }
           &__block {
             position: absolute;
@@ -170,6 +171,9 @@
               font-size: inherit;
               text-rendering: auto;
               -webkit-font-smoothing: antialiased;
+              .icon {
+                font-size: 30px;
+              }
               
               .hidden{
                 display: none;
