chat-space_Ajax

--- a/app/assets/stylesheets/modules/_messages.scss
+++ b/app/assets/stylesheets/modules/_messages.scss
@@ -140,7 +140,7 @@
             color: #999999;
           }
         }
-        &__list{
+        &__list__content{
           font-size: 14px;
           color: #434A54;
         }
