--- a/app/views/messages/_message.html.haml
+++ b/app/views/messages/_message.html.haml
@@ -1,4 +1,4 @@
-.main-chat__message__block
+.main-chat__message__block{data: {message: {id: message.id}}}
   .main-chat__message__block__name
     = message.user.name
   .main-chat__message__block__name__time
